syntax = "proto3";

package go.micro.srv.GetHouseInfo;

service GetHouseInfo {
	rpc Call(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string HouseId = 2;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	bytes HouseData = 3;
	int64 UserId = 4;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
